--- a/package.json
+++ b/package.json
@@ -27,7 +27,13 @@
   "engines": {
     "node": ">=6"
   },
+  "alias": {
+    "empty": "bin/empty.js",
+    "make-empty": "bin/empty.js",
+    "empty-commit": "bin/empty.js"
+  },
   "files": [
+    "bin/*.js",
     "src/*.js",
     "!src/*-spec.js"
   ],
@@ -54,10 +60,10 @@
     "deps": "deps-ok && dependency-check --no-dev .",
     "issues": "git-issues",
     "license": "license-checker --production --onlyunknown --csv",
-    "lint": "standard --verbose --fix src/*.js",
+    "lint": "standard --verbose --fix src/*.js bin/*.js",
     "prelint": "npm run pretty",
     "pretest": "npm run lint",
-    "pretty": "prettier-standard 'src/*.js'",
+    "pretty": "prettier-standard 'src/*.js' 'bin/*.js'",
     "secure": "nsp check",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
@@ -82,6 +88,7 @@
   },
   "dependencies": {
     "debug": "3.1.0",
-    "github": "11.0.0"
+    "github": "11.0.0",
+    "parse-github-repo-url": "1.4.1"
   }
 }
