--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   "dependencies": {
     "debug": "3.1.0",
     "github": "11.0.0",
+    "minimist": "1.2.0",
     "parse-github-repo-url": "1.4.1"
   }
 }
