--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ node_js:
   - '8'
 before_script:
   - npm prune
+script:
+  - npm test
+  - ./test/test.sh
 after_success:
   - npm run semantic-release
 branches:
