--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "npm prune",
         "npm run deps",
         "npm test",
-        "git add src/*.js",
+        "git add src/*.js bin/*.js test/*.js",
         "npm run ban"
       ],
       "pre-push": [
@@ -60,14 +60,14 @@
     "deps": "deps-ok && dependency-check --no-dev .",
     "issues": "git-issues",
     "license": "license-checker --production --onlyunknown --csv",
-    "lint": "standard --verbose --fix src/*.js bin/*.js",
+    "lint": "standard --verbose --fix src/*.js bin/*.js test/*.js",
     "prelint": "npm run pretty",
     "pretest": "npm run lint",
-    "pretty": "prettier-standard 'src/*.js' 'bin/*.js'",
+    "pretty": "prettier-standard 'src/*.js' 'bin/*.js' 'test/*.js'",
     "secure": "nsp check",
     "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
     "test": "npm run unit",
-    "unit": "mocha src/*-spec.js",
+    "unit": "mocha src/*-spec.js test/*spec.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "release": {
@@ -75,16 +75,18 @@
   },
   "devDependencies": {
     "ban-sensitive-files": "1.9.0",
+    "check-more-types": "2.24.0",
     "dependency-check": "2.9.1",
     "deps-ok": "1.2.1",
     "git-issues": "1.3.1",
+    "lazy-ass": "1.6.0",
     "license-checker": "14.0.0",
     "mocha": "3.5.3",
     "nsp": "2.8.1",
     "pre-git": "3.15.3",
     "prettier-standard": "7.0.1",
-    "standard": "10.0.3",
-    "semantic-release": "^8.0.3"
+    "semantic-release": "^8.0.3",
+    "standard": "10.0.3"
   },
   "dependencies": {
     "debug": "3.1.0",
