--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "pretest": "npm run lint",
     "pretty": "prettier-standard 'src/*.js' 'bin/*.js' 'test/*.js'",
     "secure": "nsp check",
-    "size": "t=\"$(npm pack .)\"; wc -c \"${t}\"; tar tvf \"${t}\"; rm \"${t}\";",
+    "size": "npm pack --dry",
     "test": "npm run unit",
     "unit": "mocha src/*-spec.js test/*spec.js",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
@@ -84,9 +84,9 @@
     "mocha": "3.5.3",
     "nsp": "2.8.1",
     "pre-git": "3.15.3",
-    "prettier-standard": "7.0.1",
+    "prettier-standard": "16.2.1",
     "semantic-release": "^8.0.3",
-    "standard": "10.0.3"
+    "standard": "14.3.3"
   },
   "dependencies": {
     "debug": "3.1.0",
