--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "standard": "14.3.3"
   },
   "dependencies": {
+    "@octokit/rest": "18.10.0",
     "debug": "3.1.0",
-    "github": "11.0.0",
     "minimist": "1.2.5",
     "parse-github-repo-url": "1.4.1"
   }
